--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -3,13 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1.5rem;
-  border: 3px solid var(--mantine-color-gray-6);
-  border-radius: "50px";
+  border: 2px solid var(--mantine-color-gray-6);
+  box-shadow: 0 0 10px var(--mantine-color-blue-0);
+  border-radius: 5px;
   cursor: pointer;
   &:hover {
-    border-color: var(--mantine-color-primary);
-    box-shadow: 0 0 10px var(--mantine-color-primary);
-    background-color: var(--mantine-color-gray-7);
+    box-shadow: 0 0 10px var(--mantine-color-blue-6);
   }
+}
+.icon {
+  padding: 0.5rem ;
 }
