remove some debug

--- a/src/components/RivenPreview/RivenPreview.module.css
+++ b/src/components/RivenPreview/RivenPreview.module.css
@@ -65,7 +65,7 @@
 .circle {
   margin-left: 4.3px;
   color: #9bbbff;
-  text-shadow: 0 0 7px #000000;;
+  text-shadow: 0 0 7px #000000;
 }
 .hover {
   position: absolute;
