--- a/src/global.css
+++ b/src/global.css
@@ -1,11 +1,25 @@
 :root {
-  --rainbow-colors: linear-gradient(45deg,
-    #ffff00, #00ff00, #0099ff, #001aff, #a200ff, #ff0055, #ff0000,
-    #ff0055, #ff0000, #ffff00, #00ff00, #0099ff, #001aff, #a200ff
+  --rainbow-colors: linear-gradient(
+    45deg,
+    #ffff00,
+    #00ff00,
+    #0099ff,
+    #001aff,
+    #a200ff,
+    #ff0055,
+    #ff0000,
+    #ff0055,
+    #ff0000,
+    #ffff00,
+    #00ff00,
+    #0099ff,
+    #001aff,
+    #a200ff
   );
 
   --user-status-online: var(--mantine-color-green-7);
   --user-status-invisible: var(--mantine-color-red-7);
+  --user-status-offline: var(--mantine-color-red-7);
   --user-status-ingame: var(--mantine-color-violet-7);
 
   --trade-type-purchase: var(--mantine-color-red-7);
@@ -36,278 +50,306 @@
   --order-type-sell: var(--mantine-color-violet-7);
 }
 
-[data-order-type='buy'] {
-  &[data-color-mode='bg'] {
+[data-order-type="buy"] {
+  &[data-color-mode="bg"] {
     background-color: var(--order-type-buy);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--order-type-buy);
   }
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--order-type-buy);
   }
 }
 
-[data-order-type='sell'] {
-  &[data-color-mode='bg'] {
+[data-order-type="sell"] {
+  &[data-color-mode="bg"] {
     background-color: var(--order-type-sell);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--order-type-sell);
   }
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--order-type-sell);
   }
 }
 
-
-[data-user-status='online'] {
-  &[data-color-mode='bg'] {
-    background-color: var(--user-status-online);
-  }
-
-  &[data-color-mode='text'] {
-    color: var(--user-status-online);
-  }
-}
-
-[data-user-status='invisible'] {
-  &[data-color-mode='bg'] {
-    background-color: var(--user-status-invisible);
-  }
-
-  &[data-color-mode='text'] {
-    color: var(--user-status-invisible);
-  }
-}
-
-[data-item-type='riven'] {
-  &[data-color-mode='bg'] {
-    background-color: var(--item-type-riven);
-  }
-
-  &[data-color-mode='text'] {
-    color: var(--item-type-riven);
-  }
-
-}
-
-[data-item-type='item'] {
-  &[data-color-mode='bg'] {
-    background-color: var(--item-type-item);
-  }
-
-  &[data-color-mode='text'] {
-    color: var(--item-type-item);
-  }
-
-}
-
-[data-user-status='ingame'] {
-  &[data-color-mode='bg'] {
+[data-user-status="ingame"] {
+  &[data-color-mode="bg"] {
     background-color: var(--user-status-ingame);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--user-status-ingame);
   }
-
+  &[data-color-mode="box-shadow"] {
+    box-shadow: inset 4px 0 0 0 var(--user-status-ingame);
+  }
 }
 
-[data-profit='negative'] {
-  &[data-color-mode='bg'] {
+[data-user-status="online"] {
+  &[data-color-mode="bg"] {
+    background-color: var(--user-status-online);
+  }
+
+  &[data-color-mode="text"] {
+    color: var(--user-status-online);
+  }
+  &[data-color-mode="box-shadow"] {
+    box-shadow: inset 4px 0 0 0 var(--user-status-online);
+  }
+}
+
+[data-user-status="invisible"] {
+  &[data-color-mode="bg"] {
+    background-color: var(--user-status-invisible);
+  }
+
+  &[data-color-mode="text"] {
+    color: var(--user-status-invisible);
+  }
+  &[data-color-mode="box-shadow"] {
+    box-shadow: inset 4px 0 0 0 var(--user-status-invisible);
+  }
+}
+
+[data-user-status="offline"] {
+  &[data-color-mode="bg"] {
+    background-color: var(--user-status-offline);
+  }
+
+  &[data-color-mode="text"] {
+    color: var(--user-status-offline);
+  }
+  &[data-color-mode="box-shadow"] {
+    box-shadow: inset 4px 0 0 0 var(--user-status-offline);
+  }
+}
+
+[data-item-type="riven"] {
+  &[data-color-mode="bg"] {
+    background-color: var(--item-type-riven);
+  }
+
+  &[data-color-mode="text"] {
+    color: var(--item-type-riven);
+  }
+}
+
+[data-item-type="item"] {
+  &[data-color-mode="bg"] {
+    background-color: var(--item-type-item);
+  }
+
+  &[data-color-mode="text"] {
+    color: var(--item-type-item);
+  }
+}
+
+[data-user-status="ingame"] {
+  &[data-color-mode="bg"] {
+    background-color: var(--user-status-ingame);
+  }
+
+  &[data-color-mode="text"] {
+    color: var(--user-status-ingame);
+  }
+}
+
+[data-profit="negative"] {
+  &[data-color-mode="bg"] {
     background-color: var(--negative-value);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--negative-value);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--negative-value);
   }
 }
 
-[data-profit='positive'] {
-  &[data-color-mode='bg'] {
+[data-profit="positive"] {
+  &[data-color-mode="bg"] {
     background-color: var(--positive-value);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--positive-value);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--positive-value);
   }
 }
 
-[data-trade-type='purchase'] {
-  &[data-color-mode='bg'] {
+[data-trade-type="purchase"] {
+  &[data-color-mode="bg"] {
     background-color: var(--trade-type-purchase);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--trade-type-purchase);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--trade-type-purchase);
   }
 }
 
-[data-trade-type='sale'] {
-  &[data-color-mode='bg'] {
+[data-trade-type="sale"] {
+  &[data-color-mode="bg"] {
     background-color: var(--trade-type-sale);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--trade-type-sale);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--trade-type-sale);
   }
 }
 
-[data-stock-status='pending'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="pending"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-pending);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-pending);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-pending);
   }
 }
 
-[data-stock-status='live'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="live"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-live);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-live);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-live);
   }
 }
 
-[data-stock-status='to_low_profit'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="to_low_profit"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-to-low_profit);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-to-low_profit);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-to-low_profit);
   }
 }
 
-[data-stock-status='no_sellers'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="no_sellers"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-no-sellers);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-no-sellers);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-no-sellers);
   }
 }
 
-[data-stock-status='no_buyers'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="no_buyers"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-no-buyers);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-no-buyers);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-no-buyers);
   }
 }
 
-[data-stock-status='inactive'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="inactive"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-inactive);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-inactive);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-inactive);
   }
 }
 
-[data-stock-status='sma_limit'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="sma_limit"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-sma-limit);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-sma-limit);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-sma-limit);
   }
 }
 
-[data-stock-status='order_limit'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="order_limit"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-order-limit);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-order-limit);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-order-limit);
   }
 }
 
-[data-stock-status='overpriced'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="overpriced"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-overpriced);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-overpriced);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-overpriced);
   }
 }
 
-[data-stock-status='underpriced'] {
-  &[data-color-mode='bg'] {
+[data-stock-status="underpriced"] {
+  &[data-color-mode="bg"] {
     background-color: var(--stock-status-underpriced);
   }
 
-  &[data-color-mode='text'] {
+  &[data-color-mode="text"] {
     color: var(--stock-status-underpriced);
   }
 
-  &[data-color-mode='box-shadow'] {
+  &[data-color-mode="box-shadow"] {
     box-shadow: inset 4px 0 0 0 var(--stock-status-underpriced);
   }
 }
