add log parser to debug UI

--- a/src/pages/debug/Debug.module.css
+++ b/src/pages/debug/Debug.module.css
@@ -5,3 +5,11 @@
     --offset: 280px;
   }
 }
+
+.log_parser {
+  --offset: 334px;
+  height: calc(100vh - var(--offset)) !important;
+  &.alert {
+    --offset: 280px;
+  }
+}
