Enables clickable ticker alerts
Makes ticker alerts clickable, allowing users to interact with alerts
based on their properties. Adds a handler to open URLs specified
within the alert properties. Also updates the ticker item to display
a pointer cursor when the alert is clickable.

This enhances user engagement and provides a more interactive experience
with alerts displayed in the ticker.

--- a/src/components/Ticker/Ticker.module.css
+++ b/src/components/Ticker/Ticker.module.css
@@ -1,3 +1,11 @@
+:root {
+  --shine-base: #12da00;
+  --shine-highlight: #ffffff;
+  --shine-angle: 45deg;
+  --shine-size: 250% auto;
+  --shine-pos-start: -25% center;
+  --shine-pos-end: 135% center;
+}
 .newsTicker {
   margin: 0px 0;
   display: flex;
@@ -30,53 +38,15 @@
   display: flex;
   align-items: center;
   padding: 8px;
+  &[data-clickable="true"] {
+    cursor: pointer;
+    &:hover {
+      color: var(--mantine-color-blue-4);
+    }
+  }
 }
 
 .tickerText {
-  padding: 0 16px;
-  font-size: 16px;
   line-height: 1.5;
   white-space: nowrap;
-  animation: rainbow 2.5s linear;
-  animation-iteration-count: infinite;
-  color: #fff;
-}
-@keyframes rainbow {
-  100%,
-  0% {
-    color: rgb(255, 0, 0);
-  }
-  8% {
-    color: rgb(255, 127, 0);
-  }
-  16% {
-    color: rgb(255, 255, 0);
-  }
-  25% {
-    color: rgb(127, 255, 0);
-  }
-  33% {
-    color: rgb(0, 255, 0);
-  }
-  41% {
-    color: rgb(0, 255, 127);
-  }
-  50% {
-    color: rgb(0, 255, 255);
-  }
-  58% {
-    color: rgb(0, 127, 255);
-  }
-  66% {
-    color: rgb(0, 0, 255);
-  }
-  75% {
-    color: rgb(127, 0, 255);
-  }
-  83% {
-    color: rgb(255, 0, 255);
-  }
-  91% {
-    color: rgb(255, 0, 127);
-  }
 }
