--- a/src/components/Layouts/Shared/UserMenu/UserMenu.module.css
+++ b/src/components/Layouts/Shared/UserMenu/UserMenu.module.css
@@ -2,16 +2,16 @@
 
   border: 0.2rem solid var(--mantine-color-gray);
 
-  &[data-user-status='ingame'] .indicator {
-    --indicator-color: var(--user-status-ingame);
+  &[data-user-status="online"] .indicator {
+    --indicator-color: var(--qf-user-status-online);
   }
 
-  &[data-user-status='online'] .indicator {
-    --indicator-color: var(--user-status-online);
+  &[data-user-status="invisible"] .indicator {
+    --indicator-color: var(--qf-user-status-invisible);
   }
 
-  &[data-user-status='invisible'] .indicator {
-    --indicator-color: var(--user-status-invisible);
+  &[data-user-status="ingame"] .indicator {
+    --indicator-color: var(--qf-user-status-ingame);
   }
 }
 
