--- a/src/components/Shared/Loading/Loading.module.css
+++ b/src/components/Shared/Loading/Loading.module.css
@@ -4,9 +4,10 @@
 }
 
 .root {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -89,7 +90,8 @@
   margin: 0 auto 10px auto;
   position: relative;
   width: 70px;
-  &::before{
+
+  &::before {
     border: 2px solid var(--loader-background);
     box-sizing: content-box;
     content: '';
@@ -102,6 +104,7 @@
     width: 0;
   }
 }
+
 .spin {
   animation: spin var(--loader-animation) linear infinite;
   height: 14px;
@@ -109,7 +112,8 @@
   position: absolute;
   top: 13px;
   width: 14px;
-  &::before{
+
+  &::before {
     border: 3px solid var(--loader-background);
     box-sizing: content-box;
     content: '';
@@ -122,13 +126,16 @@
     width: 14px;
   }
 }
+
 .bounce {
   animation: bounce var(--loader-animation) linear infinite;
   height: 100%;
   margin: 0 auto;
   position: relative;
   width: 100%;
-  &::before ,&::after{
+
+  &::before,
+  &::after {
     box-sizing: content-box;
     content: '';
     height: 10px;
@@ -138,14 +145,39 @@
     transform: rotate(45deg);
     width: 10px;
   }
-  &::before{
+
+  &::before {
     border-bottom: 3px solid var(--loader-background);
     border-left: 3px solid var(--loader-background);
     left: 0;
   }
-  &::after{
+
+  &::after {
     border-right: 3px solid var(--loader-background);
     border-top: 3px solid var(--loader-background);
     right: 0;
+  }
+}
+
+.loaderText {
+  text-align: center;
+
+  .loaderTextInner {
+    position: relative;
+    -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+    font-size: 25px;
+
+    span {
+      font-family: "Alfa Slab One", cursive;
+      position: relative;
+      display: inline-block;
+      color: light-dark(var(--mantine-color-primary), var(--mantine-color-primary-invert));
+      text-transform: uppercase;
+
+      &.waveAnimation {
+        animation: waviy 1s infinite;
+        animation-delay: calc(0.1s * var(--i));
+      }
+    }
   }
 }
