Adds item price history endpoint
This commit introduces a new endpoint for retrieving item price history.

- Adds `ItemRoute` to handle item-related API calls, including fetching price history.
- Implements `item_prices_lookup` command to expose the functionality to the frontend.
- Adds new types (`ItemPrice`, `ItemPricePaginationQueryDto`) to represent item price data and pagination parameters.
- Introduces `FieldChange` enum to allow partial updates in DTOs.
- Fixes a parsing error in the API error handling.

--- a/src/pages/trading_analytics/TradingAnalytics.module.css
+++ b/src/pages/trading_analytics/TradingAnalytics.module.css
@@ -23,3 +23,21 @@
     --offset: 410px;
   }
 }
+
+.databaseItem {
+  --offset: 500px;
+  height: calc(100vh - var(--offset)) !important;
+  transition: height 0.2s ease;
+
+  &.alert {
+    --offset: 250px;
+  }
+
+  &.filterOpened {
+    --offset: 325px;
+  }
+
+  &.alert.filterOpened {
+    --offset: 367px;
+  }
+}
