--- a/src/pages/tradingAnalytics/TradingAnalytics.module.css
+++ b/src/pages/tradingAnalytics/TradingAnalytics.module.css
@@ -1,31 +1,27 @@
 /* height={`calc(100vh - ${!is_running ? "400px" : "420px"})`} */
 .context {
   margin-top: 25px;
+
   &[data-has-alert="true"] {
     margin-top: 50px;
   }
 }
 
-.databaseItem {
+.databaseItems,
+.databaseRivens {
   --offset: 230px;
   height: calc(100vh - var(--offset)) !important;
+
   &.alert {
-    --offset: 240px;
-  }
-}
-.databaseSyndicate {
-  --offset: 211px;
-  height: calc(100vh - var(--offset)) !important;
-  &.alert {
-    --offset: 240px;
+    --offset: 252px;
   }
 }
 
-.itemCardChart {
-  --offset: 366px;
-  width: 100%;
+.chartUsers {
+  --offset: 150px;
   height: calc(100vh - var(--offset)) !important;
+
   &.alert {
-    --offset: 385px;
+    --offset: 250px;
   }
 }
