Refactors Riven details modal and related logic
Refactors the Riven details modal to enhance user experience and data presentation.

- Restructures the modal layout for better readability and organization.
- Implements improved data display components for key Riven attributes.
- Adds a section for similar auctions fetched from warframe.market.
- Introduces financial summary and roll evaluation components.
- Updates translations to reflect changes in terminology and presentation.
- Consolidates data fetching and processing logic for improved performance.

--- a/src/global.css
+++ b/src/global.css
@@ -18,6 +18,7 @@
 }
 
 /* Generic Color Binding by Mode */
+
 [data-color-mode="bg"] {
   background-color: var(--color);
 }
@@ -142,6 +143,14 @@
 
 [data-color="gold"] {
   --color: #da9800;
+}
+
+[data-positive] {
+  --color: var(--qf-positive-color);
+}
+
+[data-positive="negative"] {
+  --color: var(--qf-negative-color);
 }
 
 @keyframes shine-effect {
