--- a/src/components/DataDisplay/WFMAuction/WFMAuction.module.css
+++ b/src/components/DataDisplay/WFMAuction/WFMAuction.module.css
@@ -1,12 +1,21 @@
-.root {
-  border: 0.1rem solid transparent;
-  border-radius: 0.2em;
-
-  &[data-border] {
-    border-color: var(--mantine-color-gray-8);
-  }
+.hoverButton {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
 }
 
-.userName {
-  border-bottom: rem(3px) solid;
+.attributesSection {
+  flex-grow: 1;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2px;
+  padding: 2px;
+}
+
+.footerSection {
+  background: blue;
+  border-top: 10px solid var(--mantine-color-dark-4);
+
 }
